pushed some more codes

--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
+    "next-auth": "^5.0.0-beta.16",
+    "photoswipe": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-spinners": "^0.13.8"
+    "react-photoswipe-gallery": "^3.0.1",
+    "react-share": "^5.1.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
